Closed Bug 1829137 Opened 2 years ago Closed 2 years ago

"Password Required - Mozilla Firefox" popup has additional white line at the bottom with dark theme

Categories

(Firefox :: Theme, defect)

Firefox 113
Desktop
Windows 10
defect

Tracking

()

VERIFIED FIXED
115 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox112 --- wontfix
firefox113 --- wontfix
firefox114 --- wontfix
firefox115 --- verified

People

(Reporter: zstimi, Assigned: emilio)

References

(Regression)

Details

(Keywords: nightly-community, regression)

Attachments

(3 files)

Attached image password-popup.png

Found in

  • Firefox 113.0b5

Affected versions

  • Firefox 113.0b5
  • Firefox 112.0.1
  • Firefox 114.0a1

Tested platforms

  • Affected platforms: Windows 10,
  • Unaffected platforms: Ubuntu 22, macOS 12

Preconditions

  • Enable Dark theme from Add-ons and themes.
  • Have a Firefox profile with at least one saved login.
  • Have a Primary Password set.

Steps to reproduce

  1. Launch Firefox with preconditions.
  2. Click the Firefox menu and select the "Passwords" option.
  3. Trigger the "Password Required - Mozilla Firefox" popup, with editing a saved login.

Expected result

  • The popup looks as expected.

Actual result

  • The bottom part of the "Password Required - Mozilla Firefox" popup has additional white line using dark theme.

Regression range

  • I will come back with regression range ASAP.
Attached image image.png

Set release status flags based on info from the regressing bug 1810614

:emilio, since you are the author of the regressor, bug 1810614, could you take a look?

For more information, please visit auto_nag documentation.

Flags: needinfo?(emilio)

This is a similar issue as bug 1620575... We have a fractional size, we ceil, and we leave one pixel behind...

See Also: → 1620575

Much like in bug 1620575. The front-end works with sizing in int CSS
pixels, so size to that so that there isn't a mismatch between our size
and the window size.

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Flags: needinfo?(emilio)

Set release status flags based on info from the regressing bug 1810614

Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/64d01c59d68d When sizing to content, ceil to CSS pixels. r=dholbert
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 115 Branch

The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox114 to wontfix.

For more information, please visit BugBot documentation.

Flags: needinfo?(emilio)
Flags: needinfo?(emilio)

Tested on Windows 10 with Firefox 115.0b2 and Firefox 116.0a1, I can confirm this issue is fixed, verified that nothing was broken on this area, on Ubuntu 22 and macOS 10.15.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
Regressions: 1847543
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: