Bug 1829137 - When sizing to content, ceil to CSS pixels. r=dholbert

Much like in bug 1620575. The front-end works with sizing in int CSS
pixels, so size to that so that there isn't a mismatch between our size
and the window size.

Differential Revision: https://phabricator.services.mozilla.com/D176359